# thriftier

./: .gitignore  .travis.yml  README.md  Thriftier.cabal  buildContinuous.sh  configure.sh  installContinuous.sh  testContinuous.sh
lib/Thriftier/: CPPFile.hs  CPPSource.hs  Generate.hs  HandlerStub.hs  HasValueL.hs  HeaderSourcePair.hs  ImplementationRoot.hs  InterfaceRoot.hs  Language.hs  Module.hs  ModuleCPP.hs  ModuleHPP.hs  ModuleParent.hs  ModulePath.hs  ModuleThrift.hs  OutputRoot.hs  Util.hs
test/Correctness/Thriftier/: CPPFile.hs  HandlerStub.hs  Language.hs  Run.hs  Util.hs
test/data/OpenCVImplementation/Core/: MatUtil_server.skeleton.cpp
test/data/OpenCVImplementation/Features2D/: Features2D_server.skeleton.cpp
test/data/gen-cpp/: MatUtil.cpp  MatUtil.h  MatUtil_server.skeleton.cpp  mat_constants.cpp  mat_constants.h  mat_types.cpp
test/data/golden/: classDefinitions  multipleInheritance  renderAsCPP  renderAsHPP  thriftierToThrift
