name:                Thriftier 
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
-- license-file:        LICENSE
author:              Eric Christiansen             
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.16

library
  hs-source-dirs:
    lib 

  default-extensions: 
    FlexibleInstances, 
    FlexibleContexts,
    FunctionalDependencies,
    MultiParamTypeClasses,
    TemplateHaskell,
    TypeSynonymInstances,
    QuasiQuotes,
    OverloadedStrings

  default-language: Haskell2010

  ghc-options: -Wall -auto-all -caf-all -threaded -O2 
  -- -fllvm

  exposed-modules:
   Thriftier.CPPFile,
   Thriftier.Generate,
   Thriftier.HandlerStub,
   Thriftier.Util,
   Thriftier.Language

  build-depends:
    base,
    lens,
    filemanip,
    process,
    filepath,
    regex-compat,
    directory,
    MissingH,
    raw-strings-qq,
    split,
    text

executable thriftier
  hs-source-dirs:
    bin

  main-is:
    Thriftier.hs
 
  default-language:
    Haskell2010

  build-depends:
    Thriftier,
    base,
    filemanip,
    process,
    filepath,
    regex-compat,
    directory

Test-suite correctness 
  Default-language:
    Haskell2010
  Type:
    exitcode-stdio-1.0
  Hs-source-dirs:
    test
  Main-is:
    Correctness/Thriftier/Run.hs
  Build-depends:
      base >= 4
    , lens
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-golden
    --, tasty-th
    , Thriftier
