name:                Thriftier 
version:             0.1.0.0
license:             MIT
author:              Eric Christiansen             
build-type:          Simple
cabal-version:       >=1.16

library
  hs-source-dirs:
    lib 

  exposed-modules:
   Thriftier.CPPFile
   Thriftier.ImplementationRoot
   Thriftier.InterfaceRoot
   Thriftier.ModulePath
   Thriftier.Generate
   Thriftier.HandlerStub
   Thriftier.Util
   Thriftier.Language

  default-language: 
    Haskell2010

  default-extensions: 
    FlexibleInstances
    FlexibleContexts
    FunctionalDependencies
    MultiParamTypeClasses
    TemplateHaskell
    TypeSynonymInstances
    QuasiQuotes
    OverloadedStrings

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    -O2

  build-depends:
      base
    , lens
    , filemanip
    , process
    , filepath
    , regex-compat
    , directory
    , MissingH
    , raw-strings-qq
    , split
    , text

executable thriftier
  hs-source-dirs:
    bin

  main-is:
    Thriftier.hs

  default-language: 
    Haskell2010

  default-extensions: 
    FlexibleInstances
    FlexibleContexts
    FunctionalDependencies
    MultiParamTypeClasses
    TemplateHaskell
    TypeSynonymInstances
    QuasiQuotes
    OverloadedStrings

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    -O2

  build-depends:
      base
    , lens
    , filemanip
    , process
    , filepath
    , regex-compat
    , directory
    , MissingH
    , raw-strings-qq
    , split
    , text
    , directory
    , optparse-applicative

Test-suite correctness 
  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Correctness/Thriftier/Run.hs

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    -O2

  build-depends:
      base >= 4
    , lens
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-golden
    , Thriftier
    , filepath
