name:                Thriftier 
category:            Foreign
version:             0.0.1.0
license:             MIT 
author:              Eric Christiansen             
homepage:            https://github.com/emchristiansen/thriftier
build-type:          Simple
cabal-version:       >=1.16
description:          
  `Thriftier` is a command-line tool which wraps a bit of Apache Thrift and
  makes it a bit easier to use.
  
  NOTE: This package isn't even alpha yet. You probably don't want to use it.

source-repository head
  type: git
  location: https://github.com/emchristiansen/thriftier

library
  hs-source-dirs:
    lib 

  exposed-modules:
   Thriftier.CPPFile
   Thriftier.Generate
   Thriftier.HandlerStub
   Thriftier.HasValueL
   Thriftier.InterfaceRoot
   Thriftier.Language
   Thriftier.Module
   Thriftier.ModuleParent
   Thriftier.OutputRoot
   Thriftier.Util

  default-language: 
    Haskell2010

  default-extensions: 
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    TemplateHaskell
    TypeSynonymInstances
    QuasiQuotes
    FlexibleContexts
    OverloadedStrings

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    -O2

  build-depends:
      base >= 4 && < 5
    , lens
    , filemanip
    , process
    , filepath
    , regex-compat
    , directory
    , MissingH
    , raw-strings-qq
    , split
    , text

executable thriftier
  hs-source-dirs:
    bin

  main-is:
    Thriftier.hs

  default-language: 
    Haskell2010

  default-extensions: 
    FunctionalDependencies
    MultiParamTypeClasses
    TemplateHaskell
    --FlexibleInstances
    --TypeSynonymInstances
    --QuasiQuotes
    --FlexibleContexts
    --OverloadedStrings

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    ---O2

  build-depends:
      base >= 4 && < 5
    , Thriftier
    , lens
    , filemanip
    , process
    , filepath
    , regex-compat
    , directory
    , MissingH
    , raw-strings-qq
    , split
    , text
    , directory
    , optparse-applicative

Test-suite correctness 
  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Correctness/Thriftier/Run.hs

  default-language: 
    Haskell2010

  default-extensions: 
    --FlexibleInstances
    --FlexibleContexts
    --FunctionalDependencies
    --MultiParamTypeClasses
    --TemplateHaskell
    --TypeSynonymInstances
    --QuasiQuotes
    --OverloadedStrings

  ghc-options: 
    -Wall 
    -auto-all 
    -caf-all 
    ---O2

  build-depends:
      base >= 4 && < 5
    , Thriftier
    , lens
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-golden
    , filepath
